--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
     <include layout="@layout/common_title"/>
@@ -14,20 +15,24 @@
         android:layout_height="match_parent">
 
         <ListView
+            android:layout_marginTop="10dp"
             android:id="@+id/allPosts"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:minHeight="0dp"/>
+            android:minHeight="0dp"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="5dp"/>
 
-        <Button
+        <ImageButton
             android:id="@+id/createPost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/createPost"
-            android:textSize="12sp"
-            android:layout_gravity="bottom|start"
+            android:layout_gravity="bottom|end"
             android:layout_margin="8dp"
-            android:onClick="createPost"/>
+            android:onClick="createPost"
+            android:background="@null"
+            android:src="@drawable/baseline_add_24"/>
     </FrameLayout>
 
 </LinearLayout>
