--- a/app/src/main/res/layout/common_title.xml
+++ b/app/src/main/res/layout/common_title.xml
@@ -13,7 +13,9 @@
         android:text="@string/AllPosts"
         android:gravity="center"
         android:textSize="18sp"
-        android:background="@color/purple"/>
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:background="@color/pink"/>
 
     <ImageButton
         android:id="@+id/imageButtonMenu"
@@ -23,6 +25,6 @@
         android:src="@drawable/baseline_menu_24"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="15dp"
-        android:layout_marginTop="5dp"/>
+        android:layout_marginTop="5dp" />
 
 </RelativeLayout>
