--- a/app/src/main/res/layout/create_post.xml
+++ b/app/src/main/res/layout/create_post.xml
@@ -1,29 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    tools:context=".MyPostsActivity">
-    <EditText
-        android:id="@+id/title"
+    tools:context=".PostsDoActivity">
+
+    <TextView
+        android:id="@+id/createPostTitle"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:background="@color/pink"
+        android:gravity="center"
+        android:text="@string/createPost"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/createPostForm"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/createPostForm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Заголовок"/>
-    <EditText
-        android:id="@+id/author"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Автор"/>
-    <EditText
-        android:id="@+id/description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Описание"/>
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/createPostTitle"
+        android:padding="10dp">
+
+        <EditText
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Заголовок" />
+
+        <EditText
+            android:id="@+id/author"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Автор" />
+
+        <EditText
+            android:id="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:text="Описание"
+            android:gravity="start|top"/>
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/create"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Применить"/>
-</LinearLayout>
+        android:text="@string/submit"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_margin="16dp"
+        android:padding="8dp"
+        android:textColor="@color/pink"
+        android:background="@drawable/background_list"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
