--- a/app/src/main/res/layout/layout_post.xml
+++ b/app/src/main/res/layout/layout_post.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/background_list">
 
     <ImageView
         android:id="@+id/postImage"
@@ -10,6 +11,7 @@
         android:layout_height="100dp"
         android:layout_margin="10dp"
         android:src="@drawable/post_default_picture"
+        android:background="@drawable/image_background_list"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/postData" />
@@ -27,6 +29,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/postTitle"
+            android:layout_marginEnd="20dp"
             android:paddingVertical="5dp"
             android:textSize="26sp"
             android:textStyle="bold"
@@ -41,6 +44,7 @@
             android:layout_height="wrap_content"
             android:text="@string/postAuthor"
             android:textSize="14sp"
+            android:layout_marginEnd="10dp"
             app:layout_constraintTop_toBottomOf="@+id/postTitle"
             app:layout_constraintBottom_toTopOf="@+id/postDescription"
             app:layout_constraintRight_toRightOf="parent"
@@ -52,6 +56,7 @@
             android:layout_height="wrap_content"
             android:text="@string/postDescription"
             android:paddingVertical="15dp"
+            android:layout_marginEnd="10dp"
             android:textSize="20sp"
             app:layout_constraintTop_toBottomOf="@id/postAuthor"
             app:layout_constraintRight_toRightOf="parent"
@@ -62,29 +67,31 @@
         android:id="@+id/post_created_at"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:layout_marginEnd="28dp"
         android:text="12.34.3212"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/postData"/>
-
-    <TextView
-        android:id="@+id/created"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/postCreated"
         android:textSize="14sp"
-        android:layout_marginEnd="5dp"
-        app:layout_constraintRight_toLeftOf="@id/post_created_at"
-        app:layout_constraintTop_toBottomOf="@id/postData"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/postData" />
 
     <TextView
         android:id="@+id/post_updated_at"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:layout_marginEnd="28dp"
         android:text="12.32.4324"
-        app:layout_constraintTop_toBottomOf="@id/post_created_at"
-        app:layout_constraintRight_toRightOf="parent"/>
+        android:textSize="14sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/post_created_at" />
+
+    <TextView
+        android:id="@+id/created"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="6dp"
+        android:text="@string/postCreated"
+        android:textSize="14sp"
+        app:layout_constraintRight_toLeftOf="@id/post_created_at"
+        app:layout_constraintTop_toBottomOf="@id/postData" />
 
     <TextView
         android:id="@+id/updated"
