--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -8,4 +8,8 @@
         android:id="@+id/action_refresh"
         android:orderInCategory="2"
         android:title="@string/refresh"/>
+    <item
+        android:id="@+id/action_exit"
+        android:orderInCategory="3"
+        android:title="@string/exit"/>
 </menu>
