--- a/app/src/main/res/layout/profile_activity.xml
+++ b/app/src/main/res/layout/profile_activity.xml
@@ -69,6 +69,29 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nickname" />
 
+        <TextView
+            android:id="@+id/profileCreated_at"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="12.12.1970"
+            android:textColor="@color/pink"
+            android:textSize="16sp"
+            android:textStyle="italic"
+            app:layout_constraintRight_toLeftOf="@id/profileUpdated_at"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+        <TextView
+            android:id="@+id/profileUpdated_at"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="12.12.1970"
+            android:textColor="@color/pink"
+            android:textSize="16sp"
+            android:textStyle="italic"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
